fix width on small screens

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -42,11 +42,11 @@ body, #root {
   width: $xxl;
 
   @media only screen and (max-width: $xs) {
-    width: 99vw;
+    width: 100vw;
   }
 
   @media only screen and (max-width: $sm) {
-    width: 98vw;
+    width: 100vw;
   }
 
   @media only screen and (min-width: $md) {
